--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "bridgejs",
-    "version": "1.1.2",
-    "description": "TomoChain JS SDK",
+    "version": "0.0.1",
+    "description": "JS SDK for TomoBridge",
     "keywords": [
         "tomobridge",
         "tomochain"
